--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio do Schmidt</title>
+    <title>Portfólio do Schmidt!</title>
     <link rel="stylesheet" href="css/geral.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/responsivo.css">
