--- a/portfolio/index.htm
+++ b/portfolio/index.htm
@@ -42,7 +42,7 @@
         <h1>Rodrigo Gomes Schmidt</h1>
       </div>
       
-      <p>Sou engenheiro civil formado e desenvolvedor com conhecimentos em HTML (5), CSS (3) e JavaScript</p>
+      <p>Sou engenheiro civil formado e desenvolvedor com conhecimentos em HTML (5), CSS (3) e JavaScript.</p>
     </aside>
      <!-- Coluna com a foto do autor -->
     <aside>
