--- a/aula 11/ex-6.htm
+++ b/aula 11/ex-6.htm
@@ -6,6 +6,7 @@
     
 </head>
 <body>
+    <h1>BEM-VINDO!</h1>
     <button type="button" onclick="teste()">EXECUTA</button>
     <button type="button" onclick="magica()">MÁGICA</button>
     <script src="js/ex-6.js"></script>
