--- a/portfolio/contato.htm
+++ b/portfolio/contato.htm
@@ -29,10 +29,15 @@
   <div class="container">
    <section>     
     <aside>
-        <form action="">
+      <!--  No evento de onsubmit usamos o return antes da NOSSA função para "perguntar para ela"
+      se o envio DEVE ou NÃO prosseguir-->
+
+        <form action=""onsubmit="return validaForm()">
             <input type="text" name="nome" id="nome" placeholder="Digite o seu nome">
             <input type="text" name="email" id="email" placeholder="Digite o seu e-mail">
             <textarea name="mensagem" id="mensagem" placeholder="Digite sua mensagem"></textarea>
+            
+            <span id="erro"></span>
             <button type="submit">ENVIAR</button>
 
 
@@ -46,6 +51,7 @@
 
    </section>
   </div>
+  <script src="js/contato.js"></script>
 </body>
 
 </html>
